[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/Boomerang/boomerang.gd" type="Script" id=1]
[ext_resource path="res://Items/Boomerang/boomerang.png" type="Texture" id=2]
[ext_resource path="res://Items/Boomerang/boomerang_portrait.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=2]
resource_name = "spin"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[node name="Boomerang" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="Portrait" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/spin = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
